<resources>

    <string name="app_name">DrawingTest</string>
    
    <string name="new_canvas">New</string>
    <string name="pen">Pen</string>
    <string name="rubber">Rubber</string>
    <string name="title_activity_main">Draw</string>
    
    <!-- Menus -->
    <string name="current_path">Path</string>
    	<string name="reset">Reset</string>
    	<string name="close">Close</string>
    
    <string name="draw">Draw</string>
    	<string name="paint">Paint&#8230;</string>	
    	<string name="shapes">Shapes&#8230;</string>
    	<string name="brushes">Brushes&#8230;</string>
	
    <string name="segment">Segment</string>
    <string name="menu_settings">Settings</string>
    <string name="width">Width</string>
    <string name="point">Point</string>
    <string name="circle">Circle</string>
    <string name="rect">Rect</string>
    <string name="color">Color</string>
    <string name="style">Style</string>
    
    <!--  Data -->
    
    <string-array name="list_entries">
    	<item>Polygon0</item>

    </string-array>

</resources>