<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/new_canvas"
          android:title="@string/new_canvas"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/current_path"
          android:title="@string/current_path"
          android:showAsAction="always">
          
        <menu>
            <item android:id="@+id/reset"
          		android:title="@string/reset" />
            <item android:id="@+id/close"
          		android:title="@string/close" />
        </menu>
        
    </item>
    
    
    <item android:id="@+id/segment"
          android:title="@string/segment"
          android:showAsAction="ifRoom"/>

    
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
